--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Reviews</title>
+    <title>Dine & Reviews</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <nav>
+        <div class="container">
+            <div class="logo">Dine & Review</div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
-        <h1>Restaurant Reviews</h1>
+        <h1>Dine & Review</h1>
         <div class="restaurant-grid">
             <div class="restaurant-card">
-                <img src="https://loremflickr.com/200/200?random/" alt="Restaurant 1" class="restaurant-image">
+                <img src="https://loremflickr.com/1200/200?restauran/" alt="Restaurant 1" class="restaurant-image">
                 <div class="restaurant-info">
                     <div class="restaurant-name">Delicious Bites</div>
                     <div class="rating-box">
