--- a/index.html
+++ b/index.html
@@ -1,113 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dine & Reviews</title>
+    <title>LuxeStay Reviews</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <nav>
+    <header>
+        <nav>
+            <div class="container">
+                <div class="logo">LuxeStay Reviews</div>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                <div class="search-container">
+                    <input type="text" id="search-input" placeholder="Search hotels...">
+                    <button id="search-btn"><i class="fas fa-search"></i></button>
+                </div>
+                <button id="theme-toggle">
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
+                </button>
+                <div class="hamburger">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h1>Discover Your Perfect Stay</h1>
+                <p>Read reviews, compare prices, and book your dream hotel</p>
+            </div>
+        </section>
+
+        <section class="featured-hotels">
+            <div class="container">
+                <h2>Featured Hotels</h2>
+                <div class="hotel-grid" id="hotel-grid">
+                    <!-- Hotel cards will be dynamically inserted here -->
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
         <div class="container">
-            <div class="logo">Dine & Review</div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>About Us</h3>
+                    <p>LuxeStay Reviews is your trusted source for honest hotel reviews and seamless booking experiences.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact Us</h3>
+                    <p>Email: info@luxestayreviews.com</p>
+                    <p>Phone: (123) 456-7890</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 LuxeStay Reviews. All rights reserved.</p>
+            </div>
         </div>
-    </nav>
-    <div class="container">
-        <h1>Dine & Review</h1>
-        <div class="restaurant-grid">
-            <div class="restaurant-card">
-                <img src="https://loremflickr.com/1200/200?restauran/" alt="Restaurant 1" class="restaurant-image">
-                <div class="restaurant-info">
-                    <div class="restaurant-name">Delicious Bites</div>
-                    <div class="rating-box">
-                        <header>How was your experience?</header>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </div>
-                    <button class="review-button" onclick="openPopup()">Leave a Review</button>
-                </div>
-            </div>
+    </footer>
 
-            <div class="restaurant-card">
-                <img src="https://source.unsplash.com/restaurant/1200x200" alt="Restaurant 1" class="restaurant-image">
-                <div class="restaurant-info">
-                    <div class="restaurant-name">Delicious Bites</div>
-                    <div class="rating-box">
-                        <header>How was your experience?</header>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </div>
-                    <button class="review-button" onclick="openPopup()">Leave a Review</button>
-                </div>
-            </div>
-
-            <div class="restaurant-card">
-                <img src="https://source.unsplash.com/restaurant/1200x200" alt="Restaurant 1" class="restaurant-image">
-                <div class="restaurant-info">
-                    <div class="restaurant-name">Delicious Bites</div>
-                    <div class="rating-box">
-                        <header>How was your experience?</header>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </div>
-                    <button class="review-button" onclick="openPopup()">Leave a Review</button>
-                </div>
-            </div>
-            
-            <div class="restaurant-card">
-                <img src="https://source.unsplash.com/restaurant/1200x200" alt="Restaurant 1" class="restaurant-image">
-                <div class="restaurant-info">
-                    <div class="restaurant-name">Delicious Bites</div>
-                    <div class="rating-box">
-                        <header>How was your experience?</header>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </div>
-                    <button class="review-button" onclick="openPopup()">Leave a Review</button>
-                </div>
-            </div>
-            <!-- Add more restaurant cards here -->
-
-        </div>
-    </div>
-
-    <div class="popup" id="review-popup">
-        <button class="close-btn" onclick="closePopup()">&times;</button>
-        <h2>Leave Your Review</h2>
-        <textarea id="review-text" placeholder="Write your review here..."></textarea>
-        <button onclick="submitReview()">Submit Review</button>
-        <div id="reviews"></div>
-    </div>
-
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
