fix:search button is fixed

--- a/index.html
+++ b/index.html
@@ -10,26 +10,19 @@
 <body>
     <header>
         <nav>
-            <div class="container">
-                <div class="logo">LuxeStay Reviews</div>
-                <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <div class="search-container">
-                    <input type="text" id="search-input" placeholder="Search hotels...">
-                    <button id="search-btn"><i class="fas fa-search"></i></button>
-                </div>
+            <div class="logo">LuxeStay Reviews</div>
+            <ul class="nav-links" id="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <div class="search-container">
+                <input type="text" id="search-input" placeholder="Search hotels...">
+                <button id="search-btn"><i class="fas fa-search"></i></button>
                 <button id="theme-toggle">
                     <i class="fas fa-sun"></i>
                     <i class="fas fa-moon"></i>
                 </button>
-                <div class="hamburger">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
             </div>
         </nav>
     </header>
