--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
             <div class="logo">LuxeStay Reviews</div>
+            <div class="nav-toggle" id="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <ul class="nav-links" id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -45,12 +52,35 @@
         </section>
     </main>
 
+    <!-- Review Modal -->
+    <div id="review-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Submit Your Review</h2>
+            <form id="review-form">
+                <input type="hidden" id="hotel-id">
+                <div>
+                    <label for="review-text">Your Review:</label>
+                    <textarea id="review-text" required></textarea>
+                </div>
+                <div>
+                    <label for="review-rating">Your Rating:</label>
+                    <input type="number" id="review-rating" min="1" max="5" required>
+                </div>
+                <button type="submit">Submit Review</button>
+            </form>
+            <h3>Past Reviews</h3>
+            <div id="past-reviews"></div>
+        </div>
+    </div>
+
     <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About Us</h3>
-                    <p>LuxeStay Reviews is your trusted source for honest hotel reviews and seamless booking experiences.</p>
+                    <p>LuxeStay Reviews is your trusted source for honest hotel reviews and seamless booking
+                        experiences.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
@@ -74,4 +104,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
