--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1>Discover Your Perfect Stay</h1>
-                <p>Read reviews, compare prices, and book your dream hotel</p>
+                <h1>Discover Your Perfect Food</h1>
+                <p>Read reviews, compare prices, and book your dream restaurant</p>
             </div>
         </section>
 
