--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <button type="submit">Submit Review</button>
             </form>
-            <h3>Past Reviews</h3>
+            <h3><font color="black">Past Reviews</font></h3>
             <div id="past-reviews"></div>
         </div>
     </div>
